# E-state

./: .gitignore  README.md  ecc-install.json  pyproject.toml  skills-lock.json
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_assign_and_verified_asset.py
services/api/app/: __init__.py  cli.py  config.py  main.py
services/api/app/api/: __init__.py  deps.py  envelope.py  errors.py  schemas.py
services/api/app/api/routers/: __init__.py  citizen.py  datasets.py  findings.py  health.py  inspector.py  matcher.py  pricing.py  reports.py  upload.py
services/api/app/db/: __init__.py  models.py  session.py
services/api/app/domain/: __init__.py  enums.py  finding.py  parcel.py  person.py  real_estate.py  visit.py
services/api/app/ingest/: __init__.py  excel.py  markitdown_adapter.py  normalize.py  schema.py  service.py  validation.py
services/api/app/matcher/: __init__.py  config.py  context.py  draft.py  engine.py
services/api/app/matcher/detectors/: __init__.py  _helpers.py  area_portfolio_delta.py  duplicate_registration.py  (+8 more)
services/api/app/pricing/: __init__.py  config.py  engine.py
services/api/app/reports/: service.py
services/api/app/security/: __init__.py  audit.py  auth.py  pii.py
services/api/tests/: conftest.py  test_assign_and_verify.py  test_citizen_lookup.py  test_ingest_validation.py  test_matcher_detectors.py  test_normalize.py  test_pii.py  test_reports_exports.py
services/api/tests/pricing/: test_engine.py  test_router.py
(+68 files in other folders)
