[project]
name = "e-state-api"
version = "0.1.0"
description = "E-State data service: ingest, matcher, and REST API for the ОТГ asset audit platform."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "rapidfuzz>=3.10.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "typer>=0.12.5",
    "httpx>=0.27.2",
    "reportlab>=4.4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.11.2",
    "types-python-jose>=3.3.4.20240106",
]

[project.scripts]
e-state = "app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["A", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
markers = [
    "slow: marks slow tests (full real-dataset pipeline)",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unreachable = true
